<resources>
    <string name="app_name">Dialogs</string>
    <string name="alert_dialog_general">General Alert Dialog</string>
    <string name="alert_dialog_cancelable">Cancleable Alert Dialog</string>
    <string name="confirmation_dialog">Confirmation Dialog</string>
    <string name="circular_progress_dialog">Circular Progress Dialog</string>
    <string name="linear_progress_dialog">Linear Progress Dialog</string>
</resources>
